css/styles.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background-color: #f8f9fa;
  font-family: "Noto Sans TC", sans-serif;
  box-sizing: border-box;
  cursor: default;
  height: 100%;
  overflow-x: hidden;
}

.header {
  /* background-color: #435371; */
  width: 100%;
  height: 5rem;
  position: sticky;
  top: 0;
  z-index: 999;
  background-color: hsl(0 0% 100% /0.1);
  backdrop-filter: blur(1rem);
  /* background-color: hsl(0 0% 100% /0.1);
    backdrop-filter: blur(1rem); */
}

main {
  color: #000;
  padding-bottom: 5rem;
}

.flex-container-header {
  display: block;
  top: 0;
  display: flex;
  justify-content: space-around;
  /* align-items: center; */
  height: 100%;
}

.flex {
  display: flex;
}

.content-left {
  width: 30%;
}

a {
  color: #fff;
}
.content-right {
  width: fit-content;
}

.logo {
  text-align: center;
  margin-top: auto;
  margin-bottom: auto;
}

.mobile-nav-toggle {
  display: none;
}

.primary-navigation {
  list-style: none;
  padding: 0;
  margin: 0;
  /* justify-content: center; */

  padding-block: 1rem;
  align-items: center;
  justify-content: space-evenly;
}

a {
  color: #000;
}

footer a:hover{
  color: #f8f9fa  ;
}

.project-action a:hover{
  color: black;
}

li a {
  margin-inline: 1em;
  color: #000;
}

.image {
  width: 25%;
  height: 250px;
}

img {
  width: 100%;
  height: auto;
  object-fit: contain;
}

.navigation {
  display: flex;
  justify-content: space-evenly;
  gap: 2rem;
}

.nav-item {
  color: #000 !important;
  position: relative !important;
  text-decoration: none !important;
  position: relative !important;
  font-size: 1.5rem;
}

.nav-item::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 1px;
  border-radius: 4px;
  background-color: #000;
  bottom: -2px;
  left: 0;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform 0.3s ease-in-out;
}

.nav-item:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.right-border {
  border-right: 1px solid #000;
}



.first-content {
  width: 80%;
  margin: auto;
  padding-left: 10rem;
  /* height: 85vh; */
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.second-content {
  width: 100%;
  /* height: 85vh; */
  display: grid;
  gap: 2rem;
  margin: auto;
  justify-content: center;
  align-items: center;
}

.content-title{
  text-align: center;
  margin-bottom: 3rem;
}

.second-content-flex {
  width: 100%;
  display: flex;
  gap: 2rem;
  margin: auto;
  justify-content: center;
  align-items: center;
}

.third-content {
  width: 80%;
  margin: auto;
  padding-top: 10vh;
  padding-bottom: 10vh;
}

.third-content h1 {
  text-align: center;
}

.contact-me{
    width: 80%;    
    /* height: 25vh; */
    margin: auto;
    display: flex;
    justify-content: space-evenly;
}

.contact-options{
  padding-top: 20px;
  padding-bottom: 10px;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content:center;
    gap: 1rem;
}

.contact-option{
    display: flex;
    align-items: center;
    gap: 2rem ;
}

.contact-option i{
    font-size: 2.5rem;

}

.contactMeTitle{
  display: flex;
  align-items: center;
}

.contactLink{
  text-decoration: none;
  font-size: 1.5rem;
  display: flex;
  align-items: center;
  gap: 20px;
}

.card-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
}

.card {
  padding: 2%;
  /* width: 95%; */
  height: fit-content;
  box-shadow: rgba(123, 123, 123, 0.25) 0px 1px 4px !important;
  background-color: transparent !important;
  border: none !important;
}

.card-body p {
  font-size: 1.1rem;
  font-weight: bold;
}

.about-me {
  width: 50%;
}

.hidden {
  opacity: 0;
  transition: all 1.5s;
}

.left-animated {
  filter: blur(5px);
  transform: translateX(-100%);
}

.show {
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}

.list:nth-child(1) {
  transition-delay: 50ms;
}

.list:nth-child(2) {
  transition-delay: 175ms;
}

.card-header {
  display: flex;
  flex-direction: row-reverse;
}

/* a:visited {
    color: #E7F6FF;
} */

.git-link {
  border: none;
  display: inline-block;
  padding: 10px;
  background-color: transparent;
  background-repeat: no-repeat;
  cursor: pointer;
  overflow: hidden;
  outline: none;
  font-size: 1.5rem;
  transition: all 0.2s ease-in-out;
}

.git-link:hover {
  transform: scale(1.2);
}

.center {
  text-align: center;
}

.project-action {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.button-primary {
  color: #000;
  text-decoration: none;
  border: 1px #e7f6ff solid;
  border-radius: 0.5rem;
  padding: 0.5rem;
  transition: all 0.5s;
}

.button-primary:hover {
  background-color: lightgrey;
  color: #000;
  font-weight: bold;
}

.project-images {
  display: grid;
}

.project-images img {
  grid-column: 1;
  grid-row: 1;
}

.top-image {
  animation: fadeTopImage 5s infinite ease-in-out alternate;
}

.contactLink{
  color: #f8f9fa;
}

@keyframes fadeTopImage {
  0% {
    opacity: 1;
  }

  45% {
    opacity: 1;
  }

  55% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.fourth-content {  
  width: 80%;
  margin: auto;
  /* height: 85vh; */
  padding-top: 10vh;
  padding-bottom: 10vh;
}

.skill-panel {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 5rem;
}

.skills-display {
  /* padding:1%; */
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  /* gap:5px; */
}

.skills-description-container {
  display: grid;
}

.skill-description {
  grid-column: 1;
  grid-row: 1;
  padding: 1rem;
  /* box-shadow: rgba(123, 123, 123, 0.25) 0px 1px 4px; */
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hidden-description {
  opacity: 0;
}

.show-description {
  opacity: 1;
}
.skill-image {
  box-shadow: rgba(123, 123, 123, 0.25) 0px 1px 4px;
  display: flex;
  padding: 15px;
  justify-content: center;
  align-items: center;
  transition: 0.3s;
}
.skill-image:hover {
  background-color: rgba(123, 123, 123, 0.25);
}

.image-icon {
  width: 80px;
}

.skill-image i {
  font-size: 5rem;
}

.none-display {
  display: none;
}

.professional_pic{
  width: 75%;
}

footer{
  background-color: #212529;
  color: #f8f9fa;
}


.copyright{
  text-align: center;
  padding-top: 25px;
  padding-bottom: 10px;
}


@media (max-width: 59.375rem) {
  .header {
    width: 100%;
    height: 5rem;
    position: sticky;
    top: 0;
    z-index: 999;
    backdrop-filter: none;
    background-color: transparent;
  }
  .primary-navigation {
    gap: 1em;
    position: fixed;
    inset: 0 0 30% 0; /* shortcut to top right bottom  left*/

    flex-direction: column;
    padding: min(30vh, 10rem) 2em; /* min function return the minimum value betweeen the passed ones*/
    background-color: hsl(0 0% 100% /0.1);
    backdrop-filter: blur(1rem);
    transform: translateY(-100%);
    transition: transform 350ms ease-in-out;
  }

  .primary-navigation[data-visible="true"] {
    transform: translateX(0);
  }

  .mobile-nav-toggle {
    display: block;
    position: absolute;
    background-color: transparent;
    border: none;
    width: 3rem;
    font-size: 2rem;
    color: #000;
    aspect-ratio: 1;
    top: 2rem;
    right: 2rem;
    z-index: 9999;
    cursor: pointer;
  }

  .first-content {
    padding-left: 0;
  }

  .second-content {
    flex-direction: column;
    width: auto;
    height: fit-content;
    gap: 0;
    padding-bottom: 10rem;
  }

  .image {
    width: 50%;
    height: 250px;
  }

  .card-container {
    grid-template-columns: none;
    grid-template-rows: auto;
    align-items: center;
    justify-items: center;
    gap: 20px;
  }

  .card{
        display: flex;
        align-items: center;
        justify-content: center;         
    }

  .skill-panel {
    display: grid;
    grid-template-columns: none;
    grid-template-rows: 30vh 45vh;
    gap: 5rem;
  }

  .professional_pic{
    width: 100%;
  }

  .third-content{
    padding-bottom: none;
  }

  .fourth-content{
    width: 100%;
    height: fit-content;
  }

  .contact-me{
    flex-direction: column;
    
  }

  .contactMeTitle{
    padding-top: 1rem;
    justify-content: center;
  }

  .contact-option{
    white-space: nowrap;
  }

  .contact-option i{
    font-size: 30px;
  }

}

